refactor: 원장 예외 처리 및 에러 코드 세분화